<resources>
    <string name="app_name">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="contact_number">Contact number</string>
    <string name="contact_name">Contact Name</string>
    <string name="save">Save</string>
    <string name="contact_image">Contact Image</string>
    <string name="contact_name_placeholder">Contact Name</string>
    <string name="Contact_number_placeholder">Contact Phone Number</string>
    <string name="contact_name_key">contactName</string>
    <string name="contact_id_key">contactId</string>
    <string name="contact_number_key">contactNumber</string>
    <string name="add_contact_screen_title">Add/Update Contacts</string>
    <string name="show_contacts_screen_title">Contacts</string>
    <string name="show_contacts_denied_text">Please grant the permission to view you Contacts here</string>
    <string name="give_permission">Give</string>
    <string name="list_view_button">List View</string>
    <string name="grid_view_button">Grid View</string>
    <string name="recycler_view_button">Recycler</string>
    <string name="contact_name_err">Please enter a Contact Name</string>
    <string name="contact_number_err">Please enter a Contact Number</string>
    <string name="contact_updated_toast">Contact Updated Successfully</string>
    <string name="contact_added_toast">Contact Added Successfully</string>
</resources>