<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"

            android:layout_weight="20"
            android:contentDescription="@string/contact_image"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="5dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="300dp"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:text="@string/contact_name_placeholder"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/contact_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="300dp"
            android:layout_height="23dp"
            android:text="@string/Contact_number_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/contact_image"
            app:layout_constraintTop_toBottomOf="@id/contact_name"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
